libqt6c/src/libqabstractslider.hpp

typedef struct QAbstractSlider QAbstractSlider;
typedef struct QEvent QEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
QAbstractSlider* QAbstractSlider_new(QWidget* parent);
QAbstractSlider* QAbstractSlider_new2();
QMetaObject* QAbstractSlider_MetaObject(const QAbstractSlider* self);
int QAbstractSlider_Orientation(const QAbstractSlider* self);
void QAbstractSlider_SetMinimum(QAbstractSlider* self, int minimum);
int QAbstractSlider_Minimum(const QAbstractSlider* self);
void QAbstractSlider_SetMaximum(QAbstractSlider* self, int maximum);
int QAbstractSlider_Maximum(const QAbstractSlider* self);
void QAbstractSlider_SetSingleStep(QAbstractSlider* self, int singleStep);
int QAbstractSlider_SingleStep(const QAbstractSlider* self);
void QAbstractSlider_SetPageStep(QAbstractSlider* self, int pageStep);
int QAbstractSlider_PageStep(const QAbstractSlider* self);
void QAbstractSlider_SetTracking(QAbstractSlider* self, bool enable);
bool QAbstractSlider_HasTracking(const QAbstractSlider* self);
void QAbstractSlider_SetSliderDown(QAbstractSlider* self, bool sliderDown);
bool QAbstractSlider_IsSliderDown(const QAbstractSlider* self);
void QAbstractSlider_SetSliderPosition(QAbstractSlider* self, int sliderPosition);
int QAbstractSlider_SliderPosition(const QAbstractSlider* self);
void QAbstractSlider_SetInvertedAppearance(QAbstractSlider* self, bool invertedAppearance);
bool QAbstractSlider_InvertedAppearance(const QAbstractSlider* self);
void QAbstractSlider_SetInvertedControls(QAbstractSlider* self, bool invertedControls);
bool QAbstractSlider_InvertedControls(const QAbstractSlider* self);
int QAbstractSlider_Value(const QAbstractSlider* self);
void QAbstractSlider_TriggerAction(QAbstractSlider* self, int action);
void QAbstractSlider_SetValue(QAbstractSlider* self, int value);
void QAbstractSlider_SetOrientation(QAbstractSlider* self, int orientation);
void QAbstractSlider_SetRange(QAbstractSlider* self, int min, int max);
void QAbstractSlider_ValueChanged(QAbstractSlider* self, int value);
void QAbstractSlider_SliderPressed(QAbstractSlider* self);
void QAbstractSlider_SliderMoved(QAbstractSlider* self, int position);
void QAbstractSlider_SliderReleased(QAbstractSlider* self);
void QAbstractSlider_RangeChanged(QAbstractSlider* self, int min, int max);
void QAbstractSlider_ActionTriggered(QAbstractSlider* self, int action);
bool QAbstractSlider_Event(QAbstractSlider* self, QEvent* e);
void QAbstractSlider_SliderChange(QAbstractSlider* self, int change);
void QAbstractSlider_KeyPressEvent(QAbstractSlider* self, QKeyEvent* ev);
void QAbstractSlider_TimerEvent(QAbstractSlider* self, QTimerEvent* param1);
void QAbstractSlider_WheelEvent(QAbstractSlider* self, QWheelEvent* e);
void QAbstractSlider_ChangeEvent(QAbstractSlider* self, QEvent* e);
void QAbstractSlider_SetRepeatAction(QAbstractSlider* self, int action);
int QAbstractSlider_RepeatAction(const QAbstractSlider* self);
void QAbstractSlider_SetRepeatAction2(QAbstractSlider* self, int action, int thresholdTime);
void QAbstractSlider_SetRepeatAction3(QAbstractSlider* self, int action, int thresholdTime, int repeatTime);
void QAbstractSlider_Delete(QAbstractSlider* self);