QtBeef/src/Qt/qabstractslider.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QAbstractSlider
// --------------------------------------------------------------
[CRepr]
struct QAbstractSlider_Ptr: void
{
}
extension CQt
{
	[LinkName("QAbstractSlider_new")]
	public static extern QAbstractSlider_Ptr* QAbstractSlider_new(QWidget_Ptr* parent);
	[LinkName("QAbstractSlider_new2")]
	public static extern QAbstractSlider_Ptr* QAbstractSlider_new2();
	[LinkName("QAbstractSlider_Delete")]
	public static extern void QAbstractSlider_Delete(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_MetaObject")]
	public static extern QMetaObject_Ptr* QAbstractSlider_MetaObject(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_Qt_Metacast")]
	public static extern void* QAbstractSlider_Qt_Metacast(QAbstractSlider_Ptr* self, c_char* param1);
	[LinkName("QAbstractSlider_Qt_Metacall")]
	public static extern c_int QAbstractSlider_Qt_Metacall(QAbstractSlider_Ptr* self, QMetaObject_Call param1, c_int param2, void** param3);
	[LinkName("QAbstractSlider_Tr")]
	public static extern libqt_string QAbstractSlider_Tr(c_char* s);
	[LinkName("QAbstractSlider_Orientation")]
	public static extern Qt_Orientation QAbstractSlider_Orientation(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetMinimum")]
	public static extern void QAbstractSlider_SetMinimum(QAbstractSlider_Ptr* self, c_int minimum);
	[LinkName("QAbstractSlider_Minimum")]
	public static extern c_int QAbstractSlider_Minimum(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetMaximum")]
	public static extern void QAbstractSlider_SetMaximum(QAbstractSlider_Ptr* self, c_int maximum);
	[LinkName("QAbstractSlider_Maximum")]
	public static extern c_int QAbstractSlider_Maximum(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetSingleStep")]
	public static extern void QAbstractSlider_SetSingleStep(QAbstractSlider_Ptr* self, c_int singleStep);
	[LinkName("QAbstractSlider_SingleStep")]
	public static extern c_int QAbstractSlider_SingleStep(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetPageStep")]
	public static extern void QAbstractSlider_SetPageStep(QAbstractSlider_Ptr* self, c_int pageStep);
	[LinkName("QAbstractSlider_PageStep")]
	public static extern c_int QAbstractSlider_PageStep(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetTracking")]
	public static extern void QAbstractSlider_SetTracking(QAbstractSlider_Ptr* self, bool enable);
	[LinkName("QAbstractSlider_HasTracking")]
	public static extern bool QAbstractSlider_HasTracking(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetSliderDown")]
	public static extern void QAbstractSlider_SetSliderDown(QAbstractSlider_Ptr* self, bool sliderDown);
	[LinkName("QAbstractSlider_IsSliderDown")]
	public static extern bool QAbstractSlider_IsSliderDown(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetSliderPosition")]
	public static extern void QAbstractSlider_SetSliderPosition(QAbstractSlider_Ptr* self, c_int sliderPosition);
	[LinkName("QAbstractSlider_SliderPosition")]
	public static extern c_int QAbstractSlider_SliderPosition(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetInvertedAppearance")]
	public static extern void QAbstractSlider_SetInvertedAppearance(QAbstractSlider_Ptr* self, bool invertedAppearance);
	[LinkName("QAbstractSlider_InvertedAppearance")]
	public static extern bool QAbstractSlider_InvertedAppearance(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SetInvertedControls")]
	public static extern void QAbstractSlider_SetInvertedControls(QAbstractSlider_Ptr* self, bool invertedControls);
	[LinkName("QAbstractSlider_InvertedControls")]
	public static extern bool QAbstractSlider_InvertedControls(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_Value")]
	public static extern c_int QAbstractSlider_Value(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_TriggerAction")]
	public static extern void QAbstractSlider_TriggerAction(QAbstractSlider_Ptr* self, QAbstractSlider_SliderAction action);
	[LinkName("QAbstractSlider_SetValue")]
	public static extern void QAbstractSlider_SetValue(QAbstractSlider_Ptr* self, c_int value);
	[LinkName("QAbstractSlider_SetOrientation")]
	public static extern void QAbstractSlider_SetOrientation(QAbstractSlider_Ptr* self, Qt_Orientation orientation);
	[LinkName("QAbstractSlider_SetRange")]
	public static extern void QAbstractSlider_SetRange(QAbstractSlider_Ptr* self, c_int min, c_int max);
	[LinkName("QAbstractSlider_ValueChanged")]
	public static extern void QAbstractSlider_ValueChanged(QAbstractSlider_Ptr* self, c_int value);
	[LinkName("QAbstractSlider_SliderPressed")]
	public static extern void QAbstractSlider_SliderPressed(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SliderMoved")]
	public static extern void QAbstractSlider_SliderMoved(QAbstractSlider_Ptr* self, c_int position);
	[LinkName("QAbstractSlider_SliderReleased")]
	public static extern void QAbstractSlider_SliderReleased(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_RangeChanged")]
	public static extern void QAbstractSlider_RangeChanged(QAbstractSlider_Ptr* self, c_int min, c_int max);
	[LinkName("QAbstractSlider_ActionTriggered")]
	public static extern void QAbstractSlider_ActionTriggered(QAbstractSlider_Ptr* self, c_int action);
	[LinkName("QAbstractSlider_Event")]
	public static extern bool QAbstractSlider_Event(QAbstractSlider_Ptr* self, QEvent_Ptr* e);
	[LinkName("QAbstractSlider_SetRepeatAction")]
	public static extern void QAbstractSlider_SetRepeatAction(QAbstractSlider_Ptr* self, QAbstractSlider_SliderAction action);
	[LinkName("QAbstractSlider_RepeatAction")]
	public static extern QAbstractSlider_SliderAction QAbstractSlider_RepeatAction(QAbstractSlider_Ptr* self);
	[LinkName("QAbstractSlider_SliderChange")]
	public static extern void QAbstractSlider_SliderChange(QAbstractSlider_Ptr* self, QAbstractSlider_SliderChange change);
	[LinkName("QAbstractSlider_KeyPressEvent")]
	public static extern void QAbstractSlider_KeyPressEvent(QAbstractSlider_Ptr* self, QKeyEvent_Ptr* ev);
	[LinkName("QAbstractSlider_TimerEvent")]
	public static extern void QAbstractSlider_TimerEvent(QAbstractSlider_Ptr* self, QTimerEvent_Ptr* param1);
	[LinkName("QAbstractSlider_WheelEvent")]
	public static extern void QAbstractSlider_WheelEvent(QAbstractSlider_Ptr* self, QWheelEvent_Ptr* e);
	[LinkName("QAbstractSlider_ChangeEvent")]
	public static extern void QAbstractSlider_ChangeEvent(QAbstractSlider_Ptr* self, QEvent_Ptr* e);
	[LinkName("QAbstractSlider_Tr2")]
	public static extern libqt_string QAbstractSlider_Tr2(c_char* s, c_char* c);
	[LinkName("QAbstractSlider_Tr3")]
	public static extern libqt_string QAbstractSlider_Tr3(c_char* s, c_char* c, c_int n);
	[LinkName("QAbstractSlider_SetRepeatAction2")]
	public static extern void QAbstractSlider_SetRepeatAction2(QAbstractSlider_Ptr* self, QAbstractSlider_SliderAction action, c_int thresholdTime);
	[LinkName("QAbstractSlider_SetRepeatAction3")]
	public static extern void QAbstractSlider_SetRepeatAction3(QAbstractSlider_Ptr* self, QAbstractSlider_SliderAction action, c_int thresholdTime, c_int repeatTime);
}
